tests/terminate/neg/Rename.hs
module Rename where

foo x = let bar = foo in bar x
